--- a/package.json
+++ b/package.json
@@ -1,28 +1,55 @@
 {
-  "name": "project",
-  "version": "1.0.0",
+  "name": "pattern-scanner",
   "main": "expo-router/entry",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "dev": "EXPO_NO_TELEMETRY=1 npx expo start",
+    "build:web": "npx expo export --platform web",
+    "lint": "npx expo lint"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-router": "~3.4.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@lucide/lab": "^0.1.2",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "expo": "~52.0.30",
+    "expo-blur": "~14.1.3",
+    "expo-camera": "~15.1.5",
+    "expo-constants": "~16.1.3",
+    "expo-font": "~12.2.2",
+    "expo-haptics": "~13.1.3",
+    "expo-image-picker": "~15.1.0",
+    "expo-linear-gradient": "~14.1.3",
+    "expo-linking": "~6.1.3",
+    "expo-media-library": "~16.1.0",
+    "expo-router": "~4.0.17",
+    "expo-splash-screen": "~0.29.6",
+    "expo-status-bar": "~2.1.2",
+    "expo-symbols": "~0.4.3",
+    "expo-system-ui": "~4.0.5",
+    "expo-web-browser": "~14.1.5",
+    "lucide-react-native": "^0.475.0",
+    "metro": "^0.80.3",
     "react": "18.2.0",
-    "react-native": "0.73.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@expo/vector-icons": "^14.0.0",
-    "expo-status-bar": "~1.11.1"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.6",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.72.8",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3",
+    "@expo/metro-config": "^0.14.0",
+    "@expo/cli": "^0.19.0"
+  }
 }
