--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-linear-gradient": "~14.1.3",
     "expo-linking": "~6.1.3",
     "expo-media-library": "~16.1.0",
-    "expo-router": "~4.0.17",
+    "expo-router": "4.0.17",
     "expo-splash-screen": "~0.29.6",
     "expo-status-bar": "~2.1.2",
     "expo-symbols": "~0.4.3",
